actually fix display on mobile

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -167,10 +167,10 @@ dt {
   nav {
     max-width: 640px;
     margin: 0 auto;
-/*    padding: 0 10px;*/
+    padding: 0 10px;
     margin-top: 0px;
-    display: inline;
-/*    margin: 6px auto;*/
+    display: block;
+    margin: 6px auto;
 
     li {
       font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
